2002-03-13  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* guile-snarf.in: Update copyright.
	Rewrite to internalize error handling.
	Add "--compat=1.4" handling.
	Add commentary.

	* Makefile.am (libpath.h): Use @top_srcdir_absolute@.
	(snarfcppopts): New var.
	(.c.x): Use $(snarfcppopts). Rework guile-snarf usage.
	(.c.doc): Use $(snarfcppopts).

	* alist.c, arbiters.c, async.c, backtrace.c, boolean.c, chars.c,
	continuations.c, debug-malloc.c, debug.c, deprecation.c, dynl.c,
	dynwind.c, environments.c, eq.c, error.c, eval.c, evalext.c,
	extensions.c, feature.c, filesys.c, fluids.c, fports.c, gc.c,
	goops.c, gsubr.c, guardians.c, hash.c, hashtab.c, hooks.c,
	ioext.c, iselect.c, keywords.c, lang.c, list.c, load.c, macros.c,
	modules.c, net_db.c, numbers.c, objects.c, objprop.c, options.c,
	pairs.c, ports.c, posix.c, print.c, procprop.c, procs.c,
	properties.c, ramap.c, random.c, rdelim.c, read.c, regex-posix.c,
	root.c, rw.c, scmsigs.c, script.c, simpos.c, socket.c, sort.c,
	srcprop.c, stackchk.c, stacks.c, stime.c, strings.c, strop.c,
	strorder.c, strports.c, struct.c, symbols.c, threads.c, throw.c,
	unif.c, values.c, variable.c, vectors.c, version.c, vports.c,
	weaks.c: Retire inclusion guard macro SCM_MAGIC_SNARFER.

2002-03-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Got rid of the last reference to t.lloc.
	The next step will be to remove the union 't' and simplify the
	code of SCM_CEVAL that way.

2002-03-12  Neil Jerram  <neil@ossau.uklinux.net>

	* iselect.c (collisionp, gnfds, greadfds, gwritefds, gexceptfds,
	rreadfds, rwritefds, rexceptfds): Made static.

	* gc.c (terminating), fports.c (terminating): Renamed
	scm_i_terminating.

2002-03-11  Marius Vollmer  <mvo@zagadka.ping.de>

	* numbers.c (scm_divide): Adapt code from libstdc++/f2c to void
	potential overflow problems.  Thanks to John W Eaton!

	* strop.c (string_capitalize_x): Treat characters as unsigned so
	that 8-bit chars work.  Thanks to David Pirotte!
